syntax = "proto3";

package warden.service.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// Folder Service - manages folder hierarchy for secrets organization
service WardenFolderService {
  // Create a new folder
  rpc CreateFolder(CreateFolderRequest) returns (CreateFolderResponse) {
    option (google.api.http) = {
      post: "/v1/folders"
      body: "*"
    };
  }

  // Get a folder by ID
  rpc GetFolder(GetFolderRequest) returns (GetFolderResponse) {
    option (google.api.http) = {
      get: "/v1/folders/{id}"
    };
  }

  // List folders in a parent folder (or root if no parent specified)
  rpc ListFolders(ListFoldersRequest) returns (ListFoldersResponse) {
    option (google.api.http) = {
      get: "/v1/folders"
    };
  }

  // Update folder metadata
  rpc UpdateFolder(UpdateFolderRequest) returns (UpdateFolderResponse) {
    option (google.api.http) = {
      put: "/v1/folders/{id}"
      body: "*"
    };
  }

  // Delete a folder (must be empty)
  rpc DeleteFolder(DeleteFolderRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/folders/{id}"
    };
  }

  // Move a folder to a new parent
  rpc MoveFolder(MoveFolderRequest) returns (MoveFolderResponse) {
    option (google.api.http) = {
      post: "/v1/folders/{id}/move"
      body: "*"
    };
  }

  // Get the folder tree structure
  rpc GetFolderTree(GetFolderTreeRequest) returns (GetFolderTreeResponse) {
    option (google.api.http) = {
      get: "/v1/folders/tree"
    };
  }
}

// Folder entity
message Folder {
  string id = 1 [json_name = "id"];
  uint32 tenant_id = 2 [json_name = "tenantId"];
  optional string parent_id = 3 [json_name = "parentId"];
  string name = 4 [json_name = "name"];
  string path = 5 [json_name = "path"];
  string description = 6 [json_name = "description"];
  int32 depth = 7 [json_name = "depth"];
  int32 secret_count = 8 [json_name = "secretCount"];
  int32 subfolder_count = 9 [json_name = "subfolderCount"];
  google.protobuf.Timestamp create_time = 10 [json_name = "createTime"];
  google.protobuf.Timestamp update_time = 11 [json_name = "updateTime"];
  optional uint32 created_by = 12 [json_name = "createdBy"];
}

// Request to create a folder
message CreateFolderRequest {
  // Parent folder ID (null for root-level folder)
  optional string parent_id = 1 [
    json_name = "parentId",
    (buf.validate.field).string = {
      min_len: 0
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]*$"
    }
  ];

  // Folder name
  string name = 2 [
    json_name = "name",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 255
      pattern: "^[a-zA-Z0-9][a-zA-Z0-9\\-_\\.\\s]*$"
    }
  ];

  // Optional description
  string description = 3 [
    json_name = "description",
    (buf.validate.field).string = {max_len: 1024}
  ];
}

message CreateFolderResponse {
  Folder folder = 1 [json_name = "folder"];
}

// Request to get a folder
message GetFolderRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];

  // Include secret count
  bool include_counts = 2 [json_name = "includeCounts"];
}

message GetFolderResponse {
  Folder folder = 1 [json_name = "folder"];
}

// Request to list folders
message ListFoldersRequest {
  // Parent folder ID (null for root-level folders)
  optional string parent_id = 1 [
    json_name = "parentId",
    (buf.validate.field).string = {
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]*$"
    }
  ];

  // Pagination
  optional uint32 page = 2 [json_name = "page"];
  optional uint32 page_size = 3 [json_name = "pageSize"];

  // Search by name
  optional string name_filter = 4 [json_name = "nameFilter"];
}

message ListFoldersResponse {
  repeated Folder folders = 1 [json_name = "folders"];
  uint32 total = 2 [json_name = "total"];
}

// Request to update a folder
message UpdateFolderRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];

  // New name (optional)
  optional string name = 2 [
    json_name = "name",
    (buf.validate.field).string = {
      min_len: 1
      max_len: 255
      pattern: "^[a-zA-Z0-9][a-zA-Z0-9\\-_\\.\\s]*$"
    }
  ];

  // New description (optional)
  optional string description = 3 [
    json_name = "description",
    (buf.validate.field).string = {max_len: 1024}
  ];
}

message UpdateFolderResponse {
  Folder folder = 1 [json_name = "folder"];
}

// Request to delete a folder
message DeleteFolderRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];

  // Force delete even if folder contains items
  bool force = 2 [json_name = "force"];
}

// Request to move a folder
message MoveFolderRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];

  // New parent folder ID (null to move to root)
  optional string new_parent_id = 2 [
    json_name = "newParentId",
    (buf.validate.field).string = {
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]*$"
    }
  ];
}

message MoveFolderResponse {
  Folder folder = 1 [json_name = "folder"];
}

// Request to get folder tree
message GetFolderTreeRequest {
  // Root folder ID (null for entire tree)
  optional string root_id = 1 [
    json_name = "rootId",
    (buf.validate.field).string = {
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]*$"
    }
  ];

  // Maximum depth to retrieve
  optional int32 max_depth = 2 [
    json_name = "maxDepth",
    (buf.validate.field).int32 = {gte: 1, lte: 20}
  ];

  // Include secret counts
  bool include_counts = 3 [json_name = "includeCounts"];
}

// Folder tree node
message FolderTreeNode {
  Folder folder = 1 [json_name = "folder"];
  repeated FolderTreeNode children = 2 [json_name = "children"];
}

message GetFolderTreeResponse {
  repeated FolderTreeNode roots = 1 [json_name = "roots"];
}
